[project]
name = "eldpy"
description = "A Python package to download and analyze data from endangered language archives"
version = "0.1.0"
authors = [
    { name = "Sebastian Nordhoff", email = "sebastian.nordhoff@glottotopia.de" }
]
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "pyspark[ml]",
    "sklearn",
        "pycryptodome",
        "lxml",
        "matplotlib",
        "rdflib",
        "sklearn",
        "tqdm",
        "requests",
        "urllib",
        "wptools",
        "squarify",
        "langdetect",
        "random2",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ZAS-QUEST/eldpy"
"Bug Tracker" = "https://github.com/ZAS-QUEST/eldpy/issues"

[project.optional-dependencies]
dev = [
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
